WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
221138
Recover WebRTC codecs in case of GPUProcess crash
https://bugs.webkit.org/show_bug.cgi?id=221138
Summary
Recover WebRTC codecs in case of GPUProcess crash
youenn fablet
Reported
2021-01-29 09:06:31 PST
Recover WebRTC codecs in case of GPUProcess crash
Attachments
Patch
(25.58 KB, patch)
2021-01-29 09:15 PST
,
youenn fablet
ews-feeder
: commit-queue-
Details
Formatted Diff
Diff
Patch
(27.69 KB, patch)
2021-01-29 12:42 PST
,
youenn fablet
no flags
Details
Formatted Diff
Diff
Patch
(28.71 KB, patch)
2021-01-29 13:24 PST
,
youenn fablet
no flags
Details
Formatted Diff
Diff
Patch
(29.61 KB, patch)
2021-02-01 00:47 PST
,
youenn fablet
no flags
Details
Formatted Diff
Diff
Patch for landing
(29.62 KB, patch)
2021-02-02 02:08 PST
,
youenn fablet
no flags
Details
Formatted Diff
Diff
Show Obsolete
(4)
View All
Add attachment
proposed patch, testcase, etc.
youenn fablet
Comment 1
2021-01-29 09:15:37 PST
Created
attachment 418735
[details]
Patch
youenn fablet
Comment 2
2021-01-29 12:42:47 PST
Created
attachment 418757
[details]
Patch
youenn fablet
Comment 3
2021-01-29 13:24:50 PST
Created
attachment 418765
[details]
Patch
youenn fablet
Comment 4
2021-02-01 00:47:34 PST
Created
attachment 418840
[details]
Patch
Eric Carlson
Comment 5
2021-02-01 09:00:16 PST
Comment on
attachment 418840
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=418840&action=review
``
> Source/WebKit/WebProcess/GPU/webrtc/LibWebRTCCodecs.cpp:473 > + m_queue->dispatch([this, connection = makeRef(gpuConnection.connection())] {
Nit: why not `dispatchToThread` as you do elsewhere?
youenn fablet
Comment 6
2021-02-02 02:08:29 PST
Created
attachment 418975
[details]
Patch for landing
EWS
Comment 7
2021-02-02 03:00:19 PST
Committed
r272202
: <
https://trac.webkit.org/changeset/272202
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 418975
[details]
.
Radar WebKit Bug Importer
Comment 8
2021-02-02 03:01:18 PST
<
rdar://problem/73872551
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug