Source/WebKit/WebProcess/Network/webrtc/LibWebRTCProvider.h
@@ -58,11 +58,6 @@ private:
     void registerMDNSName(WebCore::DocumentIdentifier, const String& ipAddress, CompletionHandler<void(MDNSNameOrError&&)>&&) final;
     void disableNonLocalhostConnections() final;
     void startedNetworkThread() final;
-
-#if PLATFORM(COCOA)
-    std::unique_ptr<webrtc::VideoDecoderFactory> createDecoderFactory() final;
-    std::unique_ptr<webrtc::VideoEncoderFactory> createEncoderFactory() final;
-#endif
 };
 #else
 using LibWebRTCProvider = WebCore::LibWebRTCProvider;
